test/valid/fc36994_TestNew/TestNew.plume
/**
 * Tests new
 * @author 36994, César Santos
 */
class TestNew extends Object is
  method main : () -> String is //expected : ola!
    (new NewTest()).toString()